# blog-agent

./: .gitignore  Dockerfile  README.md  logconfig.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  task-specification.md
src/blog_agent/: agent.py  auth.py  main.py  web.py
src/blog_agent/agent/: __init__.py  post.py  review.py
src/blog_agent/pages/: post.py  review.py
tests/: test_authentication.py  test_food_post.py  test_product_review.py
